Update to new format for profiles

--- a/app/views/pages/projects.html.haml
+++ b/app/views/pages/projects.html.haml
@@ -74,147 +74,13 @@
 
   .row.students
     .col-xs-4
-      .media
-        %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
-          %img{src: '/assets/profile_pics/leo.jpg', width: '62px', height: '62px'}
-        .media-body
-          %h4.media-heading Leo Ng Zhi Yong
-          %p
-            %i Asia Pacific University
-
-          .hidden
-            %p
-              %b How many semesters do you have before you graduate?
-              %p
-                2
-            %p
-              %b Whats next, what do you see yourself doing with your life after you graduate?
-              
-              %p
-                Working in IT for several years at the very least. Look for opportunities to leave the country.
-
-            %p
-              %b What did you think about the program?
-              %p
-                Great exposure to a new language and being able to develop applications for an actual client.
-
-            %p
-              %b What are your aspirations?
-              %p
-                %p
-                  Nothing concrete for the time being.
-            %p
-              %b What would you say to someone that is interested to join this program
-              %p
-                %p
-                  They will need to learn how to become much more independent as a developer as compared to when they were in university.
-
-      .media
-        %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
-          %img{src: '/assets/profile_pics/deric.jpg', width: '62px', height: '62px'}
-        .media-body
-          %h4.media-heading Deric Chong Rui Kin
-          %p
-            %i Asia Pacific University
-
-          .hidden
-            %p
-              %b How many semesters do you have before you graduate?
-              %p
-                2
-            %p
-              %b Whats next, what do you see yourself doing with your life after you graduate?
-              
-              %p
-                Start off small, working in a development team, developing different types of projects, web, standalone, etc. Work my way up to become a leader of the team perhaps. Finding a job in a decent company as it will boost my opportunities in the future.
-
-            %p
-              %b What did you think about the program?
-              %p
-                A very good experience throughout. Learned how development of project in the real world are like. A great program to enhance your current skills, expanding your knowledge in the IT field.  Meet new people and new friends.
-
-            %p
-              %b What are your aspirations?
-              %p
-                %p
-                  Being someone that people looks up to. Someone that maybe designed or built something that everyone will be using. Working in an environment with good pay, and doing things i love to do. 
-            %p
-              %b What would you say to someone that is interested to join this program
-              %p
-                %p
-                  Attend everything. If possible dont miss any events that are held. You learn thing that you will no learn from the university. Prepare to work in a team and socialize with people there. You will get a new different exposure and its always fun to meet people with the same passion and interest as you. 
+      = render 'static_pages/leo'
+      = render 'static_pages/deric'
 
     .col-xs-4
-      .media
-        %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
-          %img{src: '/assets/profile_pics/SafwanMarwan.jpg', width: '62px', height: '62px'}
-        .media-body
-          %h4.media-heading Safwan Marwan
-          %p
-            %i University Malaya
+      = render 'static_pages/safwan'
 
-          .hidden
-            %p
-              %b How many semesters do you have before you graduate?
-              %p
-                2
-            %p
-              %b Whats next, what do you see yourself doing with your life after you graduate?
-              
-              %p
-                I was planning to establish a company with my friends, which should focusing on web development or android/ios application. Just not so much idea yet, so maybe I will start looking for a related job.
-
-            %p
-              %b What did you think about the program?
-              %p
-                The program is very interesting, except have to reschedule all my usual plan to suits my university and this program timetable. Other than that, it is too cool to be true. The instructors, members and the MAGIC staffs, all of them give such a lot of encouragement and hard work towards this program. I need to thank all of them, a lot. 
-
-            %p
-              %b What are your aspirations?
-              %p
-                %p
-                  I always think that I should be somebody different but yet very meaningful to others, especially my family and friends. Since there is no one in my family are doing what I am doing right now, so it is right to go on.
-            %p
-              %b What would you say to someone that is interested to join this program
-              %p
-                %p
-                  Please join. It helps you to manage your life in just three month.
-
-      .media
-        %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
-          %img{src: '/assets/profile_pics/mattheaw.jpg', width: '62px', height: '62px'}
-        .media-body
-          %h4.media-heading Matheaw Liew Zhi Ying
-          %p
-            %i Asia Pacific University
-
-          .hidden
-            %p
-              %b How many semesters do you have before you graduate?
-              %p
-                1
-            %p
-              %b Whats next, what do you see yourself doing with your life after you graduate?
-              
-              %p
-                After I graduate, I will work in an awesome company and working on some interesting software project. I will try to expand my network in the industry to build my connection with the industry people. I will try to apply for the start-up company as I can learn more Knowledge there. After working in the company for 1 - 2 years, if there are no any further personal development and opportunity, I will switch to a large scale company to further extend my career. When I gain enough experience, I will try to plan my start-up and working on it if the start-up plan is feasible.
-
-            %p
-              %b What did you think about the program?
-              %p
-                The program is great but it still need some improvement such as team building and team management. I learn a lot of new knowledge through this program. New programming language Ruby on rails, push the app live on heroku, github to maintain the code integrity. In skillcounter team, I had develop the model, view and controller for the application. I also know how to wirte rspec test cases to test each of the function. Besides that I also create the association between the user and event. The mailer and payment gateway in skillcounter is something that very useful for my future application development experience.
-
-            %p
-              %b What are your aspirations?
-              %p
-                %p
-                  On the age of 30, I will to start a new start-up company of my own. If it was too hard for me, I will find few friends to develop an application that has market value to gain the reputation first. I will work as a part time freelancer also to increase my skill and knowledge.
-            %p
-              %b What would you say to someone that is interested to join this program
-              %p
-                %p
-                  If you want to join this program, you better be serious, else you won't be able to learning anything here. Just joking, by joining this program, you will learn a lot of new things that do not teach in the college. You won't need to prepare anything but yourself. You must contribute to the team when you start the program. It will be a tough project if you didn't contribute to the team. Try to participate, contribute as much as you can then you can experience how awesome this program was.
-
+      = render 'static_pages/mattheaw'
 
   .row.project
     .col-xs-12
@@ -228,189 +94,16 @@
 
   .row.students
     .col-xs-4
-      .media
-        %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
-          %img{src: '/assets/profile_pics/prasanth.jpg', width: '62px', height: '62px'}
-        .media-body
-          %h4.media-heading Prasanth Kasi Rajan
-          %p
-            %i Multimedia University
+      = render 'static_pages/prasanth'
 
-          .hidden
-            %p
-              %b How many semesters do you have before you graduate?
-              %p
-                1
-            %p
-              %b Whats next, what do you see yourself doing with your life after you graduate?
-              
-              %p
-                Joining a company that best suits my qualification, pick up some new skills and progress further."
+      = render 'static_pages/azri'
+    .col-xs-4
+      = render 'static_pages/imran'
 
-            %p
-              %b What did you think about the program?
-              %p
-                Awesome program, awesome instructor. I owe you guys big time.
-
-            %p
-              %b What are your aspirations?
-              %p
-                %p
-                  Start a startup soon. 
-                %p
-                  Build a company.
-            %p
-              %b What would you say to someone that is interested to join this program
-              %p
-                %p
-                  Get ready for a whole lot fun with codes.
-                  Heads up, learn the basics of Ruby before you begin.
-
-      .media
-        %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
-          %img{src: "holder.js/64x64"}
-        .media-body
-          %h4.media-heading Azri Mohd Khanil
-          %p
-            %i University Malaya
-
-          .hidden
-            %p
-              %b How many semesters do you have before you graduate?
-              %p
-                3
-            %p
-              %b Whats next, what do you see yourself doing with your life after you graduate?
-              
-              %p
-                Looking for jobs and some work experience. After that I want to further my studies in artificial intelligence domain.
-
-            %p
-              %b What did you think about the program?
-              %p
-                It's a really good program I think.I learned lot of things that were not taught in college.I learn how to apply what I've learn in college(eg: programming) into real world problems.
-
-            %p
-              %b What are your aspirations?
-              %p
-                %p
-                  I look forward to enhance my knowledge in programming,web development and grab other relevant skills as well. My dream is to have hands-on experience in as many technical projects as I can post which I become well adept at the skill I have chosen to work upon.
-            %p
-              %b What would you say to someone that is interested to join this program
-              %p
-                %p
-                  I'll highly recommend it to those who are interested to join. The participants should have some good logic and programming skills as well as the ability to learn something new, fast.For that matter i think this program is suitable  for IT or entrepreneur enthusiast.
+      = render 'static_pages/jeva'
 
     .col-xs-4
-      .media
-        %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
-          %img{src: '/assets/profile_pics/imran.jpeg', width: '62px', height: '62px'}
-        .media-body
-          %h4.media-heading Mohamed Imran Bin Ismail
-          %p
-            %i University KL
-
-          .hidden
-            %p
-              %b How many semesters do you have before you graduate?
-              %p
-                N/A
-            %p
-              %b Whats next, what do you see yourself doing with your life after you graduate?
-              
-              %p
-                At the moment I have received a couple of freelance jobs. But I'm not planning on stopping here. What I'm really looking forward to is a full-time position in a company that can really improve the skills that I've acquired from PFS.
-
-            %p
-              %b What did you think about the program?
-              %p
-                It was amazing, I get to learn neat stuff like team collaboration, TDD and the best part is learning how to function as team during the development phase. I get to actually utilize these skills immediately after learning it. It was exhaustingly fun!
-
-            %p
-              %b What are your aspirations?
-              %p
-                %p
-                  Starting up something good!
-            %p
-              %b What would you say to someone that is interested to join this program
-              %p
-                %p
-                  Put your heart into it and you'll be rewarded two times fold!
-
-
-      .media
-        %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
-          %img{src: '/assets/profile_pics/jeva.jpg', width: '62px', height: '62px'}
-        .media-body
-          %h4.media-heading Jevaraajkumar A/L Selvarajah
-          %p
-            %i Multimedia University
-
-          .hidden
-            %p
-              %b How many semesters do you have before you graduate?
-              %p
-                1
-            %p
-              %b Whats next, what do you see yourself doing with your life after you graduate?
-              
-              %p
-                I am currently doing my internship with Hewlett Packard(HP) Cyberjaya in Technology & Operations Department.My next would be finding a permanent job in my studied course which is Information Technology Majoring in Software Engineering.I am interested in software development site especially web development.Therefore, I am looking forward to get a job related to those areas.
-
-            %p
-              %b What did you think about the program?
-              %p
-                I think this program is really awesome especially for final year students because this programs leads to a right path before they step into real working world. I have gained allot of knowledge and guidance throughout this program which would really benefit me in future.I hope this programs continues to create more young talented graduates.
-
-            %p
-              %b What are your aspirations?
-              %p
-                %p
-                  My aspirations would be a young successful IT professional and also be a Project Manager in future . I also would like to do my PhD one day soon if everything permits.
-            %p
-              %b What would you say to someone that is interested to join this program
-              %p
-                %p
-                  I would say to him to join this program as it is really good to gain more knowledge technically and also professionally. I would say its going to be a great program as it will a stepping stone for him/her future where all their skills will be brushed up. I also will advise to be more knowledgeable technically because this program would suit them perfectly. I would encourage final year student and also internship students o participate in this program to get more benefit from it. :) 
-
-    .col-xs-4
-      .media
-        %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
-          %img{src: '/assets/profile_pics/adrian.jpg', width: '62px', height: '62px'}
-        .media-body
-          %h4.media-heading Ching Hua Chiam (Adrian)
-          %p
-            %i University Malaya
-
-          .hidden
-            %p
-              %b How many semesters do you have before you graduate?
-              %p
-                3
-            %p
-              %b Whats next, what do you see yourself doing with your life after you graduate?
-              
-              %p
-                Travelling and work at the same time. Will be venturing into online businesses/saas so that I can work and travel at the same time. 
-
-            %p
-              %b What did you think about the program?
-              %p
-                It is a very good program for university students as this teaches them the real life skills and not purely theories. Personally I benefited a lot from the program learning how to build web application through rails. It is helping me achieve what I want which is to apply the knowledge but not just learning the theories which is what universities are doing.
-
-            %p
-              %b What are your aspirations?
-              %p
-                %p
-                  Travel and explore the world.
-                %p
-                  Be an inspiration to more people so that they take charge of their life and don't let working in the corporate/job to limit themselves.
-            %p
-              %b What would you say to someone that is interested to join this program
-              %p
-                %p
-                  By all means, join the program as they will be benefiting a lot from the program. I don't think there is much preparation needed as I am not from a strong programming background but I survived it. Just be ready to sacrifice your time to really master the skill.
-
+      = render 'static_pages/adrian'
 
 .modal.fade#profile{role: :dialog, "aria-hidden" => :true}
   .modal-dialog.modal-md
