Add zalkhairil, johnson, wilson profiles and photos

--- a/app/views/pages/projects.html.haml
+++ b/app/views/pages/projects.html.haml
@@ -79,8 +79,11 @@
 
     .col-xs-4
       = render 'static_pages/safwan'
-
       = render 'static_pages/mattheaw'
+
+    .col-xs-4
+      = render 'static_pages/wilson'
+      = render 'static_pages/johnson'
 
   .row.project
     .col-xs-12
@@ -104,6 +107,7 @@
 
     .col-xs-4
       = render 'static_pages/adrian'
+      = render 'static_pages/zalkhairil'
 
 .modal.fade#profile{role: :dialog, "aria-hidden" => :true}
   .modal-dialog.modal-md
