--- a/app/views/pages/projects.html.haml
+++ b/app/views/pages/projects.html.haml
@@ -98,8 +98,8 @@
   .row.students
     .col-xs-4
       = render 'static_pages/prasanth'
-
       = render 'static_pages/azri'
+      = render 'static_pages/nadiah'
     .col-xs-4
       = render 'static_pages/imran'
 
