Added more profile pictures

--- a/app/views/static_pages/_ain.html.haml
+++ b/app/views/static_pages/_ain.html.haml
@@ -1,6 +1,6 @@
 .media
   %a.media-left.media-middle.pull-left{href: '/students/ain'}
-    %img{src: "holder.js/64x64"}
+    %img{src: '/assets/profile_pics/ain.jpg', width: '62px', height: '62px'}
   .media-body
     %h4.media-heading
       %a{href: '/students/ain'} Nurfarrah 'Ain Amran
